<resources>
    <string name="app_name">Memory</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="label_number_of_players">Select number of players:</string>
    <string name="label_difficulty">Select difficulty:</string>
    <string name="label_number_of_cards">Select number of cards:</string>
    <string name="button_label_start_game">Start Game</string>

    <string-array name="values_num_players">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="values_difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>

    <string-array name="number_of_cards_entries">
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
        <item>36</item>
        <item>40</item>
        <item>44</item>
        <item>48</item>
        <item>52</item>
        <item>56</item>
        <item>60</item>
        <item>64</item>
    </string-array>
    <string name="title_activity_single_player">SinglePlayerActivity</string>

    <string name="host_game_label">Host game</string>
    <string name="join_game_label">Join game</string>
    <string name="log_in_label">Log In</string>
    <string name="enter_username_label">Enter username</string>
    <string name="change_username_label">Change username</string>
    <string name="ok_label">OK</string>
    <string name="label_play_locally">Play on this device</string>
    <string name="attempts_label">Attempts:</string>
    <string name="player2_username">Player 2 username</string>
    <string name="final_score_label">Final Score</string>
    <string name="back_to_main_menu_label">Back to main menu</string>
    <string name="congratulations_label">Congratulations!</string>
    <string name="your_score_label">Your score:</string>
    <string name="top_10_high_scores_label">Top 10 high scores:</string>
    <string name="play_singleplayer">Play Singleplayer</string>
    <string name="play_multiplayer">Play Multiplayer</string>

</resources>
