<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="0"
        android:text="@string/label_number_of_cards"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Spinner
        android:id="@+id/spinner_num_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="0"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="1"
        android:text="@string/label_difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="1"
        android:entries="@array/values_difficulty"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="2"
        android:text="@string/label_number_of_players"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Spinner
        android:id="@+id/spinner_num_players"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/main_menu_item_margin"
        android:layout_row="2"
        android:entries="@array/values_num_players"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/confirm_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_marginTop="20dp"
        android:layout_row="3"
        android:text="@string/ok_label" />

</GridLayout>