<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ss090310.etf.ac.bg.rs.memorija_diplomski.MultiPlayerLobbyActivity"
    android:id="@+id/lobby_constraint_layout">


    <TextView
        android:id="@+id/multiplayer_username_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.501"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/change_username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer_username_display_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />



    <ListView
        android:id="@+id/peers_list"
        style="@android:style/Widget.Holo.ListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_username_button" />

    <LinearLayout
        android:id="@+id/host_options_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <GridLayout
            android:id="@id/options_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:columnCount="2"
            android:rowCount="4"
            app:layout_constraintBottom_toTopOf="@+id/start_game_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_menu_item_margin"
                android:layout_row="0"
                android:text="@string/label_number_of_cards"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <Spinner
                android:id="@+id/spinner_num_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_menu_item_margin"
                android:layout_row="0"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/main_menu_item_margin"
                android:layout_row="1"
                android:text="@string/label_difficulty"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <Spinner
                android:id="@+id/spinner_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_menu_item_margin"
                android:layout_row="1"
                android:entries="@array/values_difficulty"
                android:spinnerMode="dropdown" />
        </GridLayout>

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/button_label_start_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
